syntax = "proto2";
package main;

message BhBlock {
	required int64 offset = 1;
	required int64 length = 2;
	required bytes hash =3;
}

message BhFile {
	required bytes name = 1;
	required int64 modified = 2;
	repeated BhBlock blocks = 3;
}

message BhMessage {
	enum BhMessageType {
		BH_PING = 1;
		BH_PEERS = 2;
	};

	required BhMessageType type = 1;
	message Peer {
		required bytes id = 1;
		repeated bytes addrs = 2;
	};
	repeated Peer peers = 2;
	repeated BhFile files = 3;
};

